# recite

./: .readthedocs.yml  CHANGELOG.md  README.md  codecov.yml  mkdocs.yml  noxfile.py  pyproject.toml
.github/workflows/: main.yml  quality.yml
docs/: conf.py  index.md  index.rst  recommendations.md  steps.md  usage.md
docs/css/: custom.css  termynal.css
docs/js/: custom.js
docs/source/: apidoc.rst  installation.rst
recite/: CHANGELOG.md  console.py  main.py  runner.py  step.py
src/recite/: main.py  runner.py  step.py
tests/: mocks.py  test_console.py  test_main.py  test_runner.py  test_steps.py  utils.py
