[tool.poetry]
name = "recite"
version = "0.2.1"
description = "Publish your poetry-based projects, without missing important steps"
authors = ["Daniel Obraczka <obraczka@informatik.uni-leipzig.de>"]
license = "MIT"
readme = "README.md"
keywords = ["releasing", "publishing", "packaging"]
classifiers = ["Development Status :: 4 - Beta", "Programming Language :: Python", "Programming Language :: Python :: 3.8", "Programming Language :: Python :: 3.9", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3 :: Only"]
repository = "https://github.com/dobraczka/recite"
packages = [
  {include = "recite", from = "src"},
  {include = "recite/py.typed", from = "src"},
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/dobraczka/recite/issues"
"Source" = "https://github.com/dobraczka/recite"
"Documentation" = "https://recite.readthedocs.io"

[tool.poetry.scripts]
recite = "recite.main:app"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
typer = "^0.7.0"
rich = "^13.1.0"
toml = "^0.10.2"
gitpython = "^3.1.30"
mkdocs = { version = "^1.4.2", optional = true}
mkdocs-material = { version = "^9.0.9", optional = true}


[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.9"
mypy = "^0.960"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pyproject-flake8 = "^0.0.1a4"
flake8-eradicate = "^1.2.1"
flake8-isort = "^4.1.1"
flake8-debugger = "^4.1.2"
flake8-comprehensions = "^3.10.0"
flake8-print = "^5.0.0"
nox-poetry = "^1.0.0"
black = "^22.3.0"
pytest-mock = "^3.7.0"
pyroma = {git = "https://github.com/CAM-Gerlach/pyroma.git", rev = "improve-pep-517-approach"}
pydocstyle = "^6.1.1"
flake8-bugbear = "^22.7.1"
darglint = "^1.8.1"
unittest-templates = "^0.1.0"

[tool.poetry.extras]
docs = ["mkdocs", "mkdocs-material"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
ignore = "E203, E266, E501, W503, F403, F401, C408, D107"
max-line-length = 88
max-complexity = 18
count = "true"
show-source = "true"
statistics = "true"
strictness = "short"
docstring_style = "sphinx"
per-file-ignores = "tests/*: DAR002"
extend-immutable-calls = "typer.Option, typer.Argument"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
include_trailing_comma = true
reverse_relative = true

[tool.cruft]
skip = ["src/recite/__init__.py", "tests/", "README.md", "docs/"]
